* Defect #11298: Issue API may not work on Ruby 1.9 in Redmine 1.4
* Defect #11307: Can't filter for negative numeric custom fields
* Defect #11365: Attachment description length is not validated
* Defect #11541: Version sharing is missing in the REST API
* Defect #11789: Edit section links broken with h5/h6 headings
* Defect #12189: No tmp/pdf directory
* Feature #11338: Exclude emails with auto-submitted => auto-generated
* Patch #9732: German translations
* Patch #11328: Fix Japanese mistranslation for 'label_language_based'
* Patch #11448: Russian translation for 1.4-stable and 2.0-stable
* Patch #11600: Fix plural form of the abbreviation for hours in Brazilian Portuguese

== 2012-06-18 v1.4.4

* Defect #10688: PDF export from Wiki - Problems with tables
* Defect #11061: Cannot choose commit versions to view differences in Git/Mercurial repository view
* Defect #11112: REST API - custom fields in POST/PUT ignored for time_entries
* Defect #11133: Wiki-page section edit link can point to incorrect section
* Defect #11160: SQL Error on time report if a custom field has multiple values for an entry
* Defect #11178: Spent time sorted by date-descending order lists same-date entries in physical order
* Defect #11185: Redmine fails to delete a project with parent/child task
* Feature #6597: Configurable session lifetime and timeout
* Patch #11113: Small glitch in German localization
* Fix for Rails vulnerabilities CVE-2012-2694 and CVE-2012-2695

== 2012-06-05 v1.4.3

* Defect #11038: "Create and continue" should preserve project, issue and activity when logging time
* Defect #11046: Redmine.pm does not support "bind as user" ldap authentication
* Defect #11051: reposman.rb fails in 1.4.2 because of missing require for rubygems
* Fix for Rails vulnerability CVE-2012-2660

== 2012-05-13 v1.4.2

* Defect #10744: rake task redmine:email:test broken
* Defect #10787: "Allow users to unsubscribe" option is confusing